# plank

./: meson.build
data/: meson.build
docklets/: Makefile.am  meson.build
docklets/Applications/: ApplicationsDockItem.vala
docklets/Calendar/: CalendarDockItem.vala  CalendarDocklet.vala  CalendarPreferences.vala  Makefile  Makefile.am  Makefile.in  calendar.gresource.xml
lib/: DockRenderer.vala  PositionManager.vala  libplank.symbols
lib/Drawing/: DockTheme.vala
tests/: Drawing.vala
